--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
   language: python
   python:
       - "3.5"
-
+  install:
+      - pip install coveralls
   script:
-      - py.test coveralls/tests.py
+      - coverage run py.test
   after_success:
       - coveralls
 
