--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@
   install:
       - pip install coveralls
   script:
-      - coverage run py.test
+      - py.test
   after_success:
       - coveralls
 
